// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article D.212 => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D.212",
    "value": "D-212",
  },
]
`;

exports[`Article D.212-5 => D-212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "source": "D.212-5",
    "value": "D-212-5",
  },
]
`;

exports[`Article D.212-5-6 => D-212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
]
`;

exports[`Article D.212-5-6-7 => D-212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
]
`;

exports[`Article D-212 => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D-212",
    "value": "D-212",
  },
]
`;

exports[`Article D-212-4 => D-212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "source": "D-212-4",
    "value": "D-212-4",
  },
]
`;

exports[`Article D212 => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D212",
    "value": "D-212",
  },
]
`;

exports[`Article D212 du code civil => D-212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
]
`;

exports[`Article D212 du code pénal => D-212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
]
`;

exports[`Article D212 du code pénal et R413 du code civil => D-212 du Code pénal, R-413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
]
`;

exports[`Article D212-3 => D-212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "source": "D212-3",
    "value": "D-212-3",
  },
]
`;

exports[`Article XD212 =>  1`] = `Array []`;

exports[`random text
Article D.212 random

text Article D.212

random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D.212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D.212",
    "value": "D-212",
  },
]
`;

exports[`random text
Article D.212-5 random

text Article D.212-5

random text => D-212-5, D-212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "source": "D.212-5",
    "value": "D-212-5",
  },
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "source": "D.212-5",
    "value": "D-212-5",
  },
]
`;

exports[`random text
Article D.212-5-6 random

text Article D.212-5-6

random text => D-212-5-6, D-212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
]
`;

exports[`random text
Article D.212-5-6-7 random

text Article D.212-5-6-7

random text => D-212-5-6-7, D-212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
]
`;

exports[`random text
Article D-212 random

text Article D-212

random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D-212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D-212",
    "value": "D-212",
  },
]
`;

exports[`random text
Article D-212-4 random

text Article D-212-4

random text => D-212-4, D-212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "source": "D-212-4",
    "value": "D-212-4",
  },
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "source": "D-212-4",
    "value": "D-212-4",
  },
]
`;

exports[`random text
Article D212 du code civil random

text Article D212 du code civil

random text => D-212 du Code civil, D-212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
]
`;

exports[`random text
Article D212 du code pénal et R413 du code civil random

text Article D212 du code pénal et R413 du code civil

random text => D-212 du Code pénal, R-413 du Code civil, D-212 du Code pénal, R-413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
]
`;

exports[`random text
Article D212 du code pénal random

text Article D212 du code pénal

random text => D-212 du Code pénal, D-212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
]
`;

exports[`random text
Article D212 random

text Article D212

random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D212",
    "value": "D-212",
  },
]
`;

exports[`random text
Article D212-3 random

text Article D212-3

random text => D-212-3, D-212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "source": "D212-3",
    "value": "D-212-3",
  },
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "source": "D212-3",
    "value": "D-212-3",
  },
]
`;

exports[`random text
Article XD212 random

text Article XD212

random text =>  1`] = `Array []`;

exports[`random text Article D.212 random text => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D.212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D.212 random text Article D.212 random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D.212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D.212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D.212-5 random text => D-212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "source": "D.212-5",
    "value": "D-212-5",
  },
]
`;

exports[`random text Article D.212-5 random text Article D.212-5 random text => D-212-5, D-212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "source": "D.212-5",
    "value": "D-212-5",
  },
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "source": "D.212-5",
    "value": "D-212-5",
  },
]
`;

exports[`random text Article D.212-5-6 random text => D-212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
]
`;

exports[`random text Article D.212-5-6 random text Article D.212-5-6 random text => D-212-5-6, D-212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
]
`;

exports[`random text Article D.212-5-6-7 random text => D-212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
]
`;

exports[`random text Article D.212-5-6-7 random text Article D.212-5-6-7 random text => D-212-5-6-7, D-212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
]
`;

exports[`random text Article D-212 random text => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D-212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D-212 random text Article D-212 random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D-212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D-212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D-212-4 random text => D-212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "source": "D-212-4",
    "value": "D-212-4",
  },
]
`;

exports[`random text Article D-212-4 random text Article D-212-4 random text => D-212-4, D-212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "source": "D-212-4",
    "value": "D-212-4",
  },
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "source": "D-212-4",
    "value": "D-212-4",
  },
]
`;

exports[`random text Article D212 du code civil random text => D-212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
]
`;

exports[`random text Article D212 du code civil random text Article D212 du code civil random text => D-212 du Code civil, D-212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
]
`;

exports[`random text Article D212 du code pénal et R413 du code civil random text => D-212 du Code pénal, R-413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
]
`;

exports[`random text Article D212 du code pénal et R413 du code civil random text Article D212 du code pénal et R413 du code civil random text => D-212 du Code pénal, R-413 du Code civil, D-212 du Code pénal, R-413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
]
`;

exports[`random text Article D212 du code pénal random text => D-212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
]
`;

exports[`random text Article D212 du code pénal random text Article D212 du code pénal random text => D-212 du Code pénal, D-212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
]
`;

exports[`random text Article D212 random text => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D212 random text Article D212 random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "source": "D212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D212-3 random text => D-212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "source": "D212-3",
    "value": "D-212-3",
  },
]
`;

exports[`random text Article D212-3 random text Article D212-3 random text => D-212-3, D-212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "source": "D212-3",
    "value": "D-212-3",
  },
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "source": "D212-3",
    "value": "D-212-3",
  },
]
`;

exports[`random text Article XD212 random text =>  1`] = `Array []`;

exports[`random text Article XD212 random text Article XD212 random text =>  1`] = `Array []`;
